GearsetPOC/force-app/main/default/objects/SalesforceMemberManualPointsAdjustment__x/SalesforceMemberManualPointsAdjustment__x.object-meta.xml
<CustomObject>
    <description>Manual points adjustment</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceMemberManualPointsAdjustment</externalName>
    <label>Manual points adjustment</label>
    <pluralLabel>Manual points adjustments</pluralLabel>
</CustomObject>