GearsetPOC/force-app/main/default/objects/SalesforceMemberManualPointsAdjustment__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>CreatedDate</description>
    <externalDeveloperName>CreatedDate</externalDeveloperName>
    <label>Created date</label>
    <type>DateTime</type>
</CustomField>