GearsetPOC/force-app/main/default/objects/SalesforceMemberManualPointsAdjustment__x/fields/ModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ModifiedBy__c</fullName>
    <description>ModifiedBy</description>
    <externalDeveloperName>ModifiedBy</externalDeveloperName>
    <label>Modified by</label>
    <length>128</length>
    <type>Text</type>
</CustomField>