GearsetPOC/force-app/main/default/objects/SalesforceMemberManualPointsAdjustment__x/fields/PointsType__c.field-meta.xml
<CustomField>
    <fullName>PointsType__c</fullName>
    <externalDeveloperName>PointsType</externalDeveloperName>
    <label>Points Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>