GearsetPOC/force-app/main/default/objects/SalesforceMemberManualPointsAdjustment__x/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value</description>
    <externalDeveloperName>Value</externalDeveloperName>
    <inlineHelpText>Adding points by default.
For deducting points, you need to enter “-“ before value.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>